# (+) New file added           #
# (-) File removed             #
# (o) File Changed             #
################################

################################
# Current Release: 0.3b80      #
################################



This has changed in Release:

#0.3b80

* rss submits current sitename/-description
* installer checks now if uploads-folder is writable
* Fixed: OpenID Login-Bug
* Security fix: encrypt/decrypt twitter/identi.ca passwords
* some multilanguage improvements

(o) install.php
(o) app/omb/controllers/settings.php
(o) app/omb/plugins/security.php
(o) app/omb/views/_index.rss
(o) app/twitter/controllers/ak_twitter.php
(o) app/twitter/views/ak_twitter/_edit.html
(o) db/library/openid.php
(o) db/library/dbscript/_functions.php
(o) wp-content/language/eng.php
(o) wp-content/language/ger.php
(o) wp-content/themes/p2/sidebar.php


#0.3b79

* P2-Theme: Sidebar: exchanged followers/following
* P2-Theme: Minor style.css fix
* Visual fix: new translation
* Fixed: Can't save avatars

(o) app/translate/views/translations/_new.html
(o) app/omb/controllers/identities.php
(o) db/library/dbscript/_functions.php
(o) wp-content/themes/p2/sidebar.php
(o) wp-content/themes/p2/style.css


#0.3b78

* possibility to disable/enable fileupload in admin menu
* possibility to set fileupload max-filesize in admin menu
* fixed: Error viewing first time the personal section
* added true/false instead of 1/0 in admin menu settings
* Cleaned up reply/permalink page

(o) app/config/config.yml
(o) app/omb/controllers/admin.php
(o) app/omb/views/admin/index.html
(o) app/omb/views/posts/_upload.html
(o) app/omb/views/posts/_entry.html
(o) db/boot.php
(o) db/library/dbscript/mysql.php
(o) db/library/dbscript/postgresql.php
(o) wp-content/themes/p2/post-form.php
(o) wp-content/themes/p2/sidebar.php
(o) wp-content/themes/prologue-theme/post-form.php

(+) app/translate/views/translations/export_eng.txt
(+) app/translate/views/translations/export_ger.txt


#0.3b77
