@@ -1,4 +1,4 @@
-
+<?php include 'wp-content/language/lang_chooser.php'; //Loads the language-file ?>
 
 <script src="<?php base_path(); ?>resource/jquery.ajaxfileupload.js" type="text/javascript"></script>
 <script src="<?php base_path(); ?>resource/jeditable/jquery.jeditable.js" type="text/javascript"></script>
@@ -29,10 +29,10 @@ $(document).ready(function() {
       },
       name        : "setting[value]",
       type      : "textarea",
-      submit    : "OK",
+      submit    : "<?php echo $txt['identica_settings_ok']; ?>",
       noappend  : true,
-      cancel    : "Cancel",
-      tooltip   : "Click to edit...",
+      cancel    : "<?php echo $txt['identica_settings_cancel']; ?>",
+      tooltip   : "<?php echo $txt['identica_settings_click_edit']; ?>",
       callback  : function(value, settings) {
         return(value);
       }
@@ -55,10 +55,10 @@ $(document).ready(function() {
       },
       name        : "setting[value]",
       type      : "textarea",
-      submit    : "OK",
+      submit    : "<?php echo $txt['identica_settings_ok']; ?>",
       noappend  : true,
-      cancel    : "Cancel",
-      tooltip   : "Click to edit...",
+      cancel    : "<?php echo $txt['identica_settings_cancel']; ?>",
+      tooltip   : "<?php echo $txt['identica_settings_click_edit']; ?>",
       callback  : function(value, settings) {
         return(value);
       }
@@ -84,9 +84,9 @@ $(document).ready(function() {
       placeholder : "<?php echo $status; ?>",
       <?php endif; ?>
       noappend    : "true",
-      submit      : "OK",
-      tooltip     : "Click to edit...",
-      cancel      : "Cancel",
+      submit      : "<?php echo $txt['identica_settings_ok']; ?>",
+      tooltip     : "<?php echo $txt['identica_settings_click_edit']; ?>",
+      cancel      : "<?php echo $txt['identica_settings_cancel']; ?>",
       callback    : function(value, settings) {
         $(this).html(settings['jsonarr'][value-0]);
         return(value);
@@ -99,9 +99,9 @@ $(document).ready(function() {
      $.get(submit_to, function(str) {
       var result = (str - 0);
       if (result > 0) {
-        $("#clicktest").html('yess. things be good');
+        $("#clicktest").html('<?php echo $txt["identica_settings_it_works"]; ?>');
       } else {
-        $("#clicktest").html('NO DENT 4 U. say hello to my dented fender');
+        $("#clicktest").html('<?php echo $txt["identica_settings_fail"]; ?>');
       }
      });
   });
@@ -115,19 +115,19 @@ $(document).ready(function() {
 
 <div id="identicabox">
 <br />
-<p>Post my notices to Identica</p>
+<h3><?php echo $txt['identica_settings_post_to_twitter']; ?></h3>
 <br />
 <br />
-<h4>Identica Username:</h4>
+<h4><?php echo $txt['identica_settings_username']; ?>:</h4>
 <p class="editable_identica_username" id="editable_identica_username"><?php echo $username->value; ?></p>
 <br />
-<h4>Identica Password:</h4>
+<h4><?php echo $txt['identica_settings_password']; ?>:</h4>
 <p class="editable_identica_password" id="editable_identica_password"><?php echo $pword; ?></p>
 <br />
-<h4>Test:</h4>
-<p class="clicktest" id="clicktest">click to test username/password</p>
+<h4><?php echo $txt['identica_settings_test_settings']; ?>:</h4>
+<p class="clicktest" id="clicktest"><?php echo $txt['identica_settings_test_click']; ?></p>
 <br />
-<h4>Status:</h4>
+<h4><?php echo $txt['identica_settings_status']; ?>:</h4>
 <p class="editable_select_tw_text" id="editable_select_tw_text"><?php echo $status; ?></p>
 <br />
 
